crates/testing/integration-tests/final_complete_run.txt
warning: C:\current_projects\Raven-Rewrite\crates\cli\magpie\Cargo.toml: file `C:\current_projects\Raven-Rewrite\crates\cli\magpie\src\main.rs` found to be present in multiple build targets:
  * `lib` target `magpie`
  * `bin` target `magpie`
warning: unused import: `PatternId`
 --> crates\analysis\rv-hir\src\exhaustiveness.rs:5:51
  |
5 | use crate::{Body, LiteralKind, MatchArm, Pattern, PatternId};
  |                                                   ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `rv-hir` (lib) generated 1 warning (run `cargo fix --lib -p rv-hir` to apply 1 suggestion)
warning: unreachable pattern
   --> crates\analysis\rv-mir\src\lower.rs:597:13
    |
597 |             _ => {
    |             ^ no value can reach this
    |
note: multiple earlier patterns match some of the same values
   --> crates\analysis\rv-mir\src\lower.rs:597:13
    |
149 |               Expr::Literal { kind, span } => {
    |               ---------------------------- matches some of the same values
...
161 |               Expr::Variable { name, def: _, span } => {
    |               ------------------------------------- matches some of the same values
...
186 | /             Expr::BinaryOp {
187 | |                 op,
188 | |                 left,
189 | |                 right,
190 | |                 span,
191 | |             } => {
    | |_____________- matches some of the same values
...
206 |               Expr::UnaryOp { op, operand, span } => {
    |               ----------------------------------- matches some of the same values
...
597 |               _ => {
    |               ^ ...and 8 other patterns collectively make this unreachable
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

warning: `rv-mir` (lib) generated 1 warning
warning: unused import: `rv_ty::TyContext`
  --> crates\cli\magpie\src\backends\llvm.rs:24:13
   |
24 |         use rv_ty::TyContext;
   |             ^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: function `main` is never used
  --> crates\cli\magpie\src\main.rs:70:4
   |
70 | fn main() -> Result<()> {
   |    ^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `get_project_dir` is never used
  --> crates\cli\magpie\src\main.rs:85:4
   |
85 | fn get_project_dir(cli: &Cli) -> PathBuf {
   |    ^^^^^^^^^^^^^^^

warning: function `cmd_build` is never used
  --> crates\cli\magpie\src\main.rs:91:4
   |
91 | fn cmd_build(cli: &Cli) -> Result<()> {
   |    ^^^^^^^^^

warning: function `cmd_run` is never used
   --> crates\cli\magpie\src\main.rs:118:4
    |
118 | fn cmd_run(cli: &Cli, args: &[String]) -> Result<()> {
    |    ^^^^^^^

warning: function `cmd_test` is never used
   --> crates\cli\magpie\src\main.rs:137:4
    |
137 | fn cmd_test(cli: &Cli) -> Result<()> {
    |    ^^^^^^^^

warning: function `cmd_check` is never used
   --> crates\cli\magpie\src\main.rs:174:4
    |
174 | fn cmd_check(cli: &Cli) -> Result<()> {
    |    ^^^^^^^^^

warning: function `cmd_clean` is never used
   --> crates\cli\magpie\src\main.rs:186:4
    |
186 | fn cmd_clean(cli: &Cli) -> Result<()> {
    |    ^^^^^^^^^

warning: function `cmd_new` is never used
   --> crates\cli\magpie\src\main.rs:197:4
    |
197 | fn cmd_new(name: String, lib: bool) -> Result<()> {
    |    ^^^^^^^

warning: `magpie` (lib) generated 9 warnings (run `cargo fix --lib -p magpie` to apply 1 suggestion)
   Compiling integration-tests v0.1.0 (C:\current_projects\Raven-Rewrite\crates\testing\integration-tests)
    Finished `release` profile [optimized] target(s) in 56.14s
     Running unittests src\lib.rs (C:\target\release\deps\integration_tests-df86a80900a76747.exe)

running 0 tests

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s

     Running tests\magpie_tests.rs (C:\target\release\deps\magpie_tests-6b1fad5c9d2f9e82.exe)

running 1 test

==== Testing project: 01-basic-arithmetic ====

  -- Interpreter Backend --
Testing basic-arithmetic v0.1.0
Running test: test_addition
  ✓ test_addition
Running test: test_subtraction
  ✓ test_subtraction
Running test: test_multiplication
  ✓ test_multiplication
Running test: test_division
  ✓ test_division
Running test: test_complex_expression
  ✓ test_complex_expression

  -- JIT Backend --
Testing basic-arithmetic v0.1.0 (JIT)
Running test: test_addition
  ✓ test_addition
Running test: test_subtraction
  ✓ test_subtraction
Running test: test_division
  ✓ test_division
Running test: test_complex_expression
  ✓ test_complex_expression
Running test: test_multiplication
  ✓ test_multiplication

  -- LLVM Backend --
Starting LLVM compilation...
LLVM compilation finished
LLVM backend compiled successfully
Note: LLVM backend currently runs entry point only
Attempting to execute binary...
Entry point returned: 1
  ✓ test_addition (compiled)
  ✓ test_subtraction (compiled)
  ✓ test_multiplication (compiled)
  ✓ test_division (compiled)
  ✓ test_complex_expression (compiled)

==== Testing project: 02-control-flow ====

  -- Interpreter Backend --
Testing control-flow v0.1.0
Running test: test_if_with_arithmetic
  ✓ test_if_with_arithmetic
Running test: test_if_true
  ✓ test_if_true
Running test: test_if_false
  ✓ test_if_false
Running test: test_nested_if
  ✓ test_nested_if

  -- JIT Backend --
Testing control-flow v0.1.0 (JIT)
Running test: test_if_true
  ✓ test_if_true
Running test: test_if_false
  ✓ test_if_false
Running test: test_nested_if
  ✓ test_nested_if
Running test: test_if_with_arithmetic
  ✓ test_if_with_arithmetic

  -- LLVM Backend --
error: test failed, to rerun pass `--test magpie_tests`

Caused by:
  process didn't exit successfully: `C:\target\release\deps\magpie_tests-6b1fad5c9d2f9e82.exe test_all_projects --nocapture` (exit code: 0xc0000005, STATUS_ACCESS_VIOLATION)
